3.2.1 (unreleased)
------------------

Issue-1971: Allow Reports in Landscape
Issue-1967: Dashboard Link to "aggregatedanalyses" results in a 404
Issue-1984: Analysisrequest "Add XX ARs" context action not translated
Issue-1997: Calculation "Formula" field description keeps untranslated
Issue-1981: Transifex Error processing bika/lims/skins/bika/bika_widgets/referencewidget.pt
Issue-1975: Matching the labels to the fields is not easy when the user wants to add a single AR
LIMS-2509: Correctly save empty values for CoordinateField and DurationField
LIMS-2600: Some improvements and fixes for Statements
LIMS-2567: Show all ARs on worksheet when adding Duplicate analysis
LIMS-2562: Add Client filter when applying Worksheet Template
LIMS-2561: Valid Reference Samples not being listed in worksheet views
LIMS-1504: Calculation formula test widgets
LIMS-2352: Cleaner and smaller instrument import log
LIMS-2527: Bika Listing Table fail on invalid `sort_on` index
LIMS-2568: Multi AR Report Template raises AttributeError
LIMS-2548: Allow entry of negative values for LDL and UDL
LIMS-2489: Fix error in suppliers view when a Reference Sample is past expiry date
LIMS-2597: AttributeError: `bika_setup` on login on a new Plone site w/o bika.lims installed
LIMS-2558: JavaScript Uncaught TypeError: Cannot read property 'checkbox' of undefined causes endless Spinner
LIMS-2473: Link User to Contact: LDAP Users not found
LIMS-2477: Reference Analysis has no dependencies; remove guard that assumes it does
LIMS-2465: Not possible to translate Bika Listing Table Workflow Action Buttons
LIMS-1391: Add configurable identifier types (CAS# for AnalysisService)
LIMS-2466: Central Instrument Location Management
LIMS-2357: Custom Landing Page and Link to switch between the Front Page and Dashboard
LIMS-2341: Cleanup and format default Multi-AR COA
LIMS-2455: Contact/Login Linkage Behavior
LIMS-2456: Restrict duplicate slots in worksheet templates to routine analyses only.