@@ -44,6 +44,5 @@ function CalculationEditView() {
                 }
             });
         });
-    }
-
+    };
 }
